--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,6 +14,8 @@
   <b>Content:</b>
   <%= @post.content %>
 </p>
+<h2>Tags</h2>
+<%= @post.tags.map { |t| t.name }.join(", ") %>
 
 <h2>Comments</h2>
 <%= render @post.comments %>
